Tue Oct  1 23:44:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>

	* vm_core.h: use __attribute__((unused)) in UNINTIALIZED_VAR on clang
	  4.0+ instead of just on 4.2. Clang has supported the unused attribute
	  since before version 4, so this should be safe.

Tue Oct  1 22:03:48 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* lib/tempfile.rb (Tempfile#unlink): finalizer is no longer needed
	  after unlinking.  patched by by normalperson (Eric Wong) at
	  [ruby-core:56521] [Bug #8768]

Tue Oct  1 20:54:33 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* file.c (stat_new_0): constify.

	* file.c (rb_stat_new): constify and export.  based on a patch by
	  Hanmac (Hans Mackowiak) at [ruby-core:53225].  [Feature #8050]

Tue Oct  1 16:03:42 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>

	* include/ruby/ruby.h (ruby_safe_level_4_warning): needed by extension
	  libraries which check safe level 4.  [ruby-dev:47517] [Bug #8652]

Mon Sep 30 23:14:36 2013  Zachary Scott  <e@zzak.io>

	* ext/objspace/objspace.c: [DOC] Cleaned up many rdoc formatting
	  issues and several duplicate grammar bugs.

Mon Sep 30 23:01:01 2013  Zachary Scott  <e@zzak.io>

	* ext/objspace/object_tracing.c: [DOC] Adjust rdoc formatting and fix
	  small grammar typo

Mon Sep 30 17:28:39 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/object_tracing.c: [DOC] add some notes for 
	  ObjectSpace::trace_object_allocations.

Mon Sep 30 16:46:58 2013  Koichi Sasada  <ko1@atdot.net>

	* ext/objspace/object_tracing.c: add new 3 methods to control tracing.
	  * ObjectSpace::trace_object_allocations_start
	  * ObjectSpace::trace_object_allocations_stop
	  * ObjectSpace::trace_object_allocations_clear
	  And some refactoring.

	* test/objspace/test_objspace.rb: add a test for new methods.

	* NEWS: add a description for new methods.

Mon Sep 30 11:18:04 2013  Koichi Sasada  <ko1@atdot.net>

	* gc.c (rb_gc_disable): do rest_sweep() before disable GC.
	  This fix may solve a failure of