@@ -1,3 +1,9 @@
+Wed Oct  2 14:18:56 2013  Nobuyoshi Nakada  <nobu@ruby-lang.org>
+
+	* io.c (rb_io_close_read): keep fptr in write_io to be discarded, to
+	  fix freed pointer access when it is in use by other threads, and get
+	  rid of potential memory/fd leak.
+
 Tue Oct  1 23:44:00 2013  Charlie Somerville  <charliesome@ruby-lang.org>
 
 	* vm_core.h: use __attribute__((unused)) in UNINTIALIZED_VAR on clang
